test_scores/negative_dimers/features/Q9BYN8.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9BYN8.pkl.xz